# RaccoonEngine

./: .gitignore  CMakeLists.txt  DefaultScene.rcsc
include/editor/: Scene.h  scene.h  viewport.h
include/engine/: window.h
include/engine/application/: application.h  input_manager.h  rocket.h  window.h
include/engine/gentries/: Entity.h  entity.h  light.h
include/engine/renderer/: ModelRenderer.h  ShaderCompiler.h  model.h  model_renderer.h  shader_compiler.h
include/engine/utils/: callbacks.h
include/engine/utils/modelloaders/: ObjLoader.h  obj_loader.h
src/: main.cpp
src/editor/: Scene.cpp  scene.cpp  viewport.cpp
src/editor/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/engine/: input_manager.cpp
src/engine/application/: application.cpp  input_manager.cpp  rocket.cpp  window.cpp
src/engine/gentries/: Entity.cpp  entity.cpp  light.cpp
src/engine/renderer/: ModelRenderer.cpp  ShaderCompiler.cpp  model.cpp  model_renderer.cpp  shader_compiler.cpp
src/engine/utils/modelloaders/: ObjLoader.cpp  obj_loader.cpp
src/engine/windowing/: window.cpp
